// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp SignUpForm should render properly 1`] = `
<View
  onLoginSuccess={[Function]}
  style={
    [
      {
        "alignItems": "stretch",
        "display": "flex",
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "minHeight": 0,
        "minWidth": 0,
        "position": "relative",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "display": "flex",
          "flexBasis": "auto",
          "flexDirection": "column",
          "flexShrink": 0,
          "minHeight": 0,
          "minWidth": 0,
          "position": "relative",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexShrink": 0,
            "minHeight": 0,
            "minWidth": 0,
            "position": "relative",
          },
        ]
      }
    >
      <TextInput
        accessibilityLabel="signup-email-input"
        autoCapitalize="none"
        color="rgba(255,255,255,1.00)"
        focusable={true}
        fontSize={20}
        onBlur={[Function]}
        onChangeText={[Function]}
        outlineWidth={0}
        placeholder="auth:email"
        placeholderTextColor="rgba(255,255,255,0.60)"
        selectionColor="black"
        style={
          [
            {
              "borderBottomColor": "rgba(255,255,255,0.60)",
              "borderBottomWidth": 0.75,
              "borderStyle": "solid",
              "flex": 1,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "minWidth": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 8,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <View
      pointerEvents="none"
      style={
        [
          {
            "alignItems": "stretch",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "height": 22,
            "minHeight": 22,
            "minWidth": 22,
            "position": "relative",
            "width": 22,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexShrink": 0,
            "minHeight": 0,
            "minWidth": 0,
            "position": "relative",
          },
        ]
      }
    >
      <TextInput
        accessibilityLabel="signup-first-name-input"
        autoCapitalize="none"
        color="rgba(255,255,255,1.00)"
        focusable={true}
        fontSize={20}
        onBlur={[Function]}
        onChangeText={[Function]}
        outlineWidth={0}
        placeholder="sign_up_form:first_name"
        placeholderTextColor="rgba(255,255,255,0.60)"
        selectionColor="black"
        style={
          [
            {
              "borderBottomColor": "rgba(255,255,255,0.60)",
              "borderBottomWidth": 0.75,
              "borderStyle": "solid",
              "flex": 1,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "minWidth": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 8,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <View
      pointerEvents="none"
      style={
        [
          {
            "alignItems": "stretch",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "height": 22,
            "minHeight": 22,
            "minWidth": 22,
            "position": "relative",
            "width": 22,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexShrink": 0,
            "minHeight": 0,
            "minWidth": 0,
            "position": "relative",
          },
        ]
      }
    >
      <TextInput
        accessibilityLabel="signup-last-name-input"
        autoCapitalize="none"
        color="rgba(255,255,255,1.00)"
        focusable={true}
        fontSize={20}
        onBlur={[Function]}
        onChangeText={[Function]}
        outlineWidth={0}
        placeholder="sign_up_form:last_name"
        placeholderTextColor="rgba(255,255,255,0.60)"
        selectionColor="black"
        style={
          [
            {
              "borderBottomColor": "rgba(255,255,255,0.60)",
              "borderBottomWidth": 0.75,
              "borderStyle": "solid",
              "flex": 1,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "minWidth": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 8,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <View
      pointerEvents="none"
      style={
        [
          {
            "alignItems": "stretch",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "height": 22,
            "minHeight": 22,
            "minWidth": 22,
            "position": "relative",
            "width": 22,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexShrink": 0,
            "minHeight": 0,
            "minWidth": 0,
            "position": "relative",
          },
        ]
      }
    >
      <TextInput
        accessibilityLabel="signup-password-input"
        autoCapitalize="none"
        color="rgba(255,255,255,1.00)"
        focusable={true}
        fontSize={20}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        outlineWidth={0}
        placeholder="auth:password"
        placeholderTextColor="rgba(255,255,255,0.60)"
        secureTextEntry={true}
        selectionColor="black"
        style={
          [
            {
              "borderBottomColor": "rgba(255,255,255,0.60)",
              "borderBottomWidth": 0.75,
              "borderStyle": "solid",
              "flex": 1,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "minWidth": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 40,
              "paddingTop": 8,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        style={
          [
            {
              "alignItems": "stretch",
              "display": "flex",
              "flexBasis": "auto",
              "flexDirection": "column",
              "flexShrink": 0,
              "minHeight": 0,
              "minWidth": 0,
              "paddingLeft": 10,
              "paddingRight": 10,
              "position": "absolute",
              "right": 0,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      pointerEvents="none"
      style={
        [
          {
            "alignItems": "stretch",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "height": 22,
            "minHeight": 22,
            "minWidth": 22,
            "position": "relative",
            "width": 22,
          },
        ]
      }
    />
    <View
      accessibilityLabel="sign_up-button"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "stretch",
              "alignSelf": "center",
              "backgroundColor": "rgba(236,223,223,1.00)",
              "borderBottomLeftRadius": 30,
              "borderBottomRightRadius": 30,
              "borderTopLeftRadius": 30,
              "borderTopRightRadius": 30,
              "display": "flex",
              "flexBasis": "auto",
              "flexDirection": "row",
              "flexShrink": 0,
              "justifyContent": "center",
              "marginTop": 50,
              "minHeight": 0,
              "minWidth": 0,
              "paddingLeft": 50,
              "paddingRight": 50,
              "paddingVertical": 16,
              "position": "relative",
              "width": "100%",
            },
          ]
        }
      >
        <Text
          fontFamily="System"
          style={
            [
              {
                "color": "rgba(0,0,0,1.00)",
                "display": "flex",
                "fontFamily": "System",
                "fontSize": 14,
                "opacity": 1,
              },
            ]
          }
          suppressHighlighting={true}
        >
          sign_up_form:sign_up
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`SignUp SignUpPasswordRequirements should render properly after password input focus 1`] = `
<View
  onLoginSuccess={[Function]}
  style={
    [
      {
        "alignItems": "stretch",
        "display": "flex",
        "flexBasis": "auto",
        "flexDirection": "column",
        "flexShrink": 0,
        "minHeight": 0,
        "minWidth": 0,
        "position": "relative",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "stretch",
          "display": "flex",
          "flexBasis": "auto",
          "flexDirection": "column",
          "flexShrink": 0,
          "minHeight": 0,
          "minWidth": 0,
          "position": "relative",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexShrink": 0,
            "minHeight": 0,
            "minWidth": 0,
            "position": "relative",
          },
        ]
      }
    >
      <TextInput
        accessibilityLabel="signup-email-input"
        autoCapitalize="none"
        color="rgba(255,255,255,1.00)"
        focusable={true}
        fontSize={20}
        onBlur={[Function]}
        onChangeText={[Function]}
        outlineWidth={0}
        placeholder="auth:email"
        placeholderTextColor="rgba(255,255,255,0.60)"
        selectionColor="black"
        style={
          [
            {
              "borderBottomColor": "rgba(255,255,255,0.60)",
              "borderBottomWidth": 0.75,
              "borderStyle": "solid",
              "flex": 1,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "minWidth": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 8,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <View
      pointerEvents="none"
      style={
        [
          {
            "alignItems": "stretch",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "height": 22,
            "minHeight": 22,
            "minWidth": 22,
            "position": "relative",
            "width": 22,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexShrink": 0,
            "minHeight": 0,
            "minWidth": 0,
            "position": "relative",
          },
        ]
      }
    >
      <TextInput
        accessibilityLabel="signup-first-name-input"
        autoCapitalize="none"
        color="rgba(255,255,255,1.00)"
        focusable={true}
        fontSize={20}
        onBlur={[Function]}
        onChangeText={[Function]}
        outlineWidth={0}
        placeholder="sign_up_form:first_name"
        placeholderTextColor="rgba(255,255,255,0.60)"
        selectionColor="black"
        style={
          [
            {
              "borderBottomColor": "rgba(255,255,255,0.60)",
              "borderBottomWidth": 0.75,
              "borderStyle": "solid",
              "flex": 1,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "minWidth": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 8,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <View
      pointerEvents="none"
      style={
        [
          {
            "alignItems": "stretch",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "height": 22,
            "minHeight": 22,
            "minWidth": 22,
            "position": "relative",
            "width": 22,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexShrink": 0,
            "minHeight": 0,
            "minWidth": 0,
            "position": "relative",
          },
        ]
      }
    >
      <TextInput
        accessibilityLabel="signup-last-name-input"
        autoCapitalize="none"
        color="rgba(255,255,255,1.00)"
        focusable={true}
        fontSize={20}
        onBlur={[Function]}
        onChangeText={[Function]}
        outlineWidth={0}
        placeholder="sign_up_form:last_name"
        placeholderTextColor="rgba(255,255,255,0.60)"
        selectionColor="black"
        style={
          [
            {
              "borderBottomColor": "rgba(255,255,255,0.60)",
              "borderBottomWidth": 0.75,
              "borderStyle": "solid",
              "flex": 1,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "minWidth": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 0,
              "paddingTop": 8,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <View
      pointerEvents="none"
      style={
        [
          {
            "alignItems": "stretch",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "height": 22,
            "minHeight": 22,
            "minWidth": 22,
            "position": "relative",
            "width": 22,
          },
        ]
      }
    />
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "auto",
            "flexDirection": "row",
            "flexShrink": 0,
            "minHeight": 0,
            "minWidth": 0,
            "position": "relative",
          },
        ]
      }
    >
      <TextInput
        accessibilityLabel="signup-password-input"
        autoCapitalize="none"
        color="rgba(255,255,255,1.00)"
        focusable={true}
        fontSize={20}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        outlineWidth={0}
        placeholder="auth:password"
        placeholderTextColor="rgba(255,255,255,0.60)"
        secureTextEntry={true}
        selectionColor="black"
        style={
          [
            {
              "borderBottomColor": "rgba(255,255,255,0.60)",
              "borderBottomWidth": 0.75,
              "borderStyle": "solid",
              "flex": 1,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "minWidth": 0,
              "paddingBottom": 8,
              "paddingLeft": 0,
              "paddingRight": 40,
              "paddingTop": 8,
            },
          ]
        }
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        style={
          [
            {
              "alignItems": "stretch",
              "display": "flex",
              "flexBasis": "auto",
              "flexDirection": "column",
              "flexShrink": 0,
              "minHeight": 0,
              "minWidth": 0,
              "paddingLeft": 10,
              "paddingRight": 10,
              "position": "absolute",
              "right": 0,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          selectable={false}
          style={
            [
              {
                "color": "#FFFFFF",
                "fontSize": 24,
              },
              undefined,
              {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <View
      pointerEvents="none"
      style={
        [
          {
            "alignItems": "stretch",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "height": 22,
            "minHeight": 22,
            "minWidth": 22,
            "position": "relative",
            "width": 22,
          },
        ]
      }
    />
    <Text
      fontFamily="System"
      style={
        [
          {
            "color": "rgba(255,255,255,1.00)",
            "display": "flex",
            "fontFamily": "System",
          },
        ]
      }
      suppressHighlighting={true}
    >
      password_requirements:must_include
    </Text>
    <View
      style={
        [
          {
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "center",
            "marginTop": 12,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginBottom": 4,
              "width": "50%",
            },
          ]
        }
        testID="password_requirements:at_least_characters"
      >
        <View
          style={
            [
              {
                "width": 18,
              },
            ]
          }
        >
          x
        </View>
        <Text
          fontFamily="System"
          style={
            [
              {
                "color": "rgba(255,255,255,0.60)",
                "display": "flex",
                "fontFamily": "System",
                "fontSize": 14,
                "marginLeft": 8,
              },
            ]
          }
          suppressHighlighting={true}
        >
          password_requirements:at_least_characters
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginBottom": 4,
              "width": "50%",
            },
          ]
        }
        testID="password_requirements:no_blank_spaces"
      >
        <View
          style={
            [
              {
                "width": 18,
              },
            ]
          }
        >
          x
        </View>
        <Text
          fontFamily="System"
          style={
            [
              {
                "color": "rgba(255,255,255,0.60)",
                "display": "flex",
                "fontFamily": "System",
                "fontSize": 14,
                "marginLeft": 8,
              },
            ]
          }
          suppressHighlighting={true}
        >
          password_requirements:no_blank_spaces
        </Text>
      </View>
    </View>
    <View
      pointerEvents="none"
      style={
        [
          {
            "alignItems": "stretch",
            "display": "flex",
            "flexBasis": "auto",
            "flexShrink": 0,
            "height": 22,
            "minHeight": 22,
            "minWidth": 22,
            "position": "relative",
            "width": 22,
          },
        ]
      }
    />
    <View
      accessibilityLabel="sign_up-button"
      accessibilityState={
        {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "stretch",
              "alignSelf": "center",
              "backgroundColor": "rgba(236,223,223,1.00)",
              "borderBottomLeftRadius": 30,
              "borderBottomRightRadius": 30,
              "borderTopLeftRadius": 30,
              "borderTopRightRadius": 30,
              "display": "flex",
              "flexBasis": "auto",
              "flexDirection": "row",
              "flexShrink": 0,
              "justifyContent": "center",
              "marginTop": 50,
              "minHeight": 0,
              "minWidth": 0,
              "paddingLeft": 50,
              "paddingRight": 50,
              "paddingVertical": 16,
              "position": "relative",
              "width": "100%",
            },
          ]
        }
      >
        <Text
          fontFamily="System"
          style={
            [
              {
                "color": "rgba(0,0,0,1.00)",
                "display": "flex",
                "fontFamily": "System",
                "fontSize": 14,
                "opacity": 1,
              },
            ]
          }
          suppressHighlighting={true}
        >
          sign_up_form:sign_up
        </Text>
      </View>
    </View>
  </View>
</View>
`;
